styles/Home.module.css
.container {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.main {
  width: 100%;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.title a {
  color: orange;
  text-decoration: none;
}

.title a:hover,
.title a:focus,
.title a:active {
  text-decoration: underline;
}

.title {
  margin: 0;
  line-height: 1.15;
  font-size: 4rem;
}

.title,
.description {
  text-align: center;
}

.description {
  line-height: 1.5;
  font-size: 1.5rem;
}

.code {
  background: #fafafa;
  border-radius: 5px;
  padding: 0.75rem;
  font-size: 1.1rem;
  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
    Bitstream Vera Sans Mono, Courier New, monospace;
}

.grid {
  display: flex;
  /* flex-direction: row; */
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  width: 100%;
  max-width: 800px;
  margin-top: 3rem;
}

.card {
  margin: 10px;
  width: 75%;
  height: 15rem;
  max-width: 15rem;
  max-height: 15rem;
  padding: 1.5rem;
  text-align: left;
  color: inherit;
  text-decoration: none;
  border: 1px solid #eaeaea;
  border-radius: 10px;
  transition: color 0.15s ease, border-color 0.15s ease;
}

.card:hover,
.card:focus,
.card:active {
  color: orange;
  border-color: orange;
}

.card h3 {
  margin: 0 0 1rem 0;
  font-size: 1.5rem;
}

.card p {
  margin: 0;
  font-size: 1.25rem;
  line-height: 1.5;
}

@media (max-width: 600px) {
  .grid {
    width: 100%;
    flex-direction: column;
  }
}

.image {
  display: flex;
  
}

.image img {
  height: auto;
  width: 100%;
  max-width: 300px;
  margin: 0 auto;
}


.card .cardTitle {
  position: absolute;
  display: flex;
  margin: 10rem 1rem;
  font-size: 3rem;
  font-family: 'Montserrat', sans-serif;
  font-weight: 700;
  color: white;
}

.card:hover .cardTitle {
  color: orange;
}

.card .cardTitleDark {
  position: absolute;
  display: flex;
  margin: 10rem 1rem;
  font-size: 3rem;
  font-family: 'Montserrat', sans-serif;
  font-weight: 700;
  color: black;
}

.card:hover .cardTitleDark {
  color: orange;
}

.content {
  width: 100%;
  max-width: 700px;
}

